[project]
name = "django-rls"
classifiers = [ "Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Framework :: Django", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13",]
description = "Row Level Security for PostgreSQL with Strawberry for Django."
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [ "Django>=4.2,<5.4", "django-stubs[compatible-mypy]>=4.2.0", "psycopg2-binary>=2.9", "questionary>=2.1.1",]
[[project.authors]]
name = "Pim Ritmeijer"
email = "pjmritmeijer@gmail.com"

[[project.maintainers]]
name = "Pim Ritmeijer"
email = "pjmritmeijer@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "pre-commit>=4.0.1", "coverage>=7.2", "pytest>=7.2", "pytest-cov>=4,<6", "django-mock-queries>=2.1.7", "types-mock>=5.0.0", "types-jwt>=0.1.0", "mkdocs>=1.3.0", "mkdocs-markdownextradata-plugin>=0.2.5", "mkdocs-material>=8.5.4", "mkdocs-minify-plugin>=0.5.0", "pymdown-extensions>=9.9", "Markdown>=3.4.1", "Faker>=18.2.0", "pytest-asyncio>=0.21.0", "pydoc-markdown[novella]>=4.6.4", "setuptools>=67.6.0", "pytest-django>=4.5.2", "typer>=0.12.1", "pygithub>=2.3.0", "httpx>=0.27.0", "jinja2>=3.1.4", "toml>=0.10.2",]

[project.urls]
Documentation = "https://pritmeijer.github.io/django-rls/"
Homepage = "https://github.com/pritmeijer/django-rls"

[tool.mypy]
plugins = [ "mypy_django_plugin.main",]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "testproject.settings"

[tool.pytest.ini_options]
django_find_project = false
minversion = "6.0"
addopts = "-ra -q"
testpaths = [ "tests",]
DJANGO_SETTINGS_MODULE = "testproject.settings"
python_files = "tests.py test_*.py *_tests.py"
asyncio_mode = "auto"
markers = [ "settings_a: uses the default settings.", "settings_b: uses custom settings.",]

[tool.ruff.lint]
select = [ "E", "F", "ERA", "I",]
ignore = [ "TID252", "E501",]

[tool.hatch.build.targets.wheel]
packages = [ "django_rls",]
